[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/main/muleke.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ferrite.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/mythe.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/main/world.gd" type="Script" id=4]
[ext_resource path="res://src/main/tomboy.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=5]
size = Vector3( 1, 2, 1 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 1, 1, 1 )

[sub_resource type="Environment" id=4]
ambient_light_color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )

[sub_resource type="CubeMesh" id=1]
size = Vector3( 7.887, 0.076, 20 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 5.605, 10.816, 20 )

[node name="world" type="Spatial"]
script = ExtResource( 4 )

[node name="cam" type="Camera" parent="."]
transform = Transform( 0.618861, 0.0295783, 0.784943, 0, 0.999291, -0.0376553, -0.785501, 0.0233034, 0.618422, 2.243, -0.746, 4.847 )

[node name="tomboy" type="Node" parent="."]
script = ExtResource( 5 )

[node name="body" type="MeshInstance" parent="tomboy"]
transform = Transform( 0.996462, 0, 0.0840431, 0, 1, 0, -0.0840431, 0, 0.996462, -0.678, -0.704, 4.041 )
mesh = SubResource( 5 )
material/0 = null

[node name="enemy" type="Node" parent="."]
script = ExtResource( 1 )

[node name="body" type="MeshInstance" parent="enemy"]
transform = Transform( 0.999293, 0, 0.0375855, 0, 1, 0, -0.0375855, 0, 0.999293, 0, -0.697, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 4 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.988335, 0.0652489, 0.137608, -0.11158, 0.925203, 0.362697, -0.10365, -0.373821, 0.921691, 0, 4.12049, -0.353801 )
shadow_enabled = true

[node name="scenery" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="scenery"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.74148, -2.98695 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="scenery"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6.68869, 0.0528527, -2.98695 )
mesh = SubResource( 2 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="scenery"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.70633, 0.0528527, -2.98695 )
mesh = SubResource( 2 )
material/0 = null

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Button" parent="ui"]
modulate = Color( 1, 0.403922, 0.145098, 1 )
margin_left = 4.00035
margin_top = 263.989
margin_right = 105.0
margin_bottom = 287.989
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "attack"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="defend" type="Button" parent="ui"]
modulate = Color( 1, 0.403922, 0.145098, 1 )
margin_left = 4.00035
margin_top = 295.102
margin_right = 105.0
margin_bottom = 321.102
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "defend"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fire" type="Button" parent="ui"]
modulate = Color( 1, 0.403922, 0.145098, 1 )
margin_left = 4.00035
margin_top = 325.817
margin_right = 105.0
margin_bottom = 351.817
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "fire"
align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enhp" type="Label" parent="ui"]
margin_left = 2.78419
margin_top = 2.43371
margin_right = 122.784
margin_bottom = 17.4337
custom_fonts/font = ExtResource( 3 )
text = "their hp: 40"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="urhp" type="Label" parent="ui"]
margin_left = 4.00035
margin_top = 20.8049
margin_right = 148.0
margin_bottom = 44.8049
custom_fonts/font = ExtResource( 3 )
text = "ur hp: 36"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="urmn" type="Label" parent="ui"]
margin_left = 155.0
margin_top = 21.0
margin_right = 299.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 3 )
text = "ur mn: 20"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="block" from="." to="tomboy" method="_on_world_block"]
[connection signal="attack" from="tomboy" to="enemy" method="_on_tomboy_attack"]
[connection signal="hit" from="tomboy" to="." method="_on_tomboy_hit"]
[connection signal="magic" from="tomboy" to="." method="_on_tomboy_magic"]
[connection signal="attack" from="enemy" to="tomboy" method="_on_enemy_attack"]
[connection signal="hit" from="enemy" to="." method="_on_enemy_hit"]
[connection signal="pressed" from="ui/attack" to="tomboy" method="_on_attack_pressed"]
[connection signal="pressed" from="ui/defend" to="tomboy" method="_on_defend_pressed"]
[connection signal="pressed" from="ui/fire" to="tomboy" method="_on_fire_pressed"]
